# Redactix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare_scrubadub.py
examples/: basic.py
python/redactix/: __init__.py  _core.pyi
src/: lib.rs  redaction.rs  redactor.rs  types.rs
src/detectors/: credit_card.rs  email.rs  mod.rs  phone.rs
src/redactix/: __init__.py
src/validators/: luhn.rs  mod.rs
tests/: test_detect.py  test_redact.py  test_redactor.py
