[package]
name = "redactix"
version = "0.1.0"
edition = "2024"
description = "Rust-backed Python library for detecting and redacting common PII in text"
license = "MIT"
repository = "https://github.com/RikidWai/Redactix"
readme = "README.md"
keywords = ["pii", "redaction", "privacy", "python"]
categories = ["text-processing"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
regex = "1"
