[project]
name = "redactix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ricky Chu", email = "rickywai77@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[tool.maturin]
module-name = "redactix._core"
python-packages = ["redactix"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
