[project]
name = "redactix"
version = "0.1.0"
description = "Rust-backed Python library for detecting and redacting common PII in text"
readme = "README.md"
authors = [
    { name = "Redactix Contributors" }
]
license = "MIT"
requires-python = ">=3.9"
dependencies = []
keywords = ["pii", "redaction", "privacy", "text-processing", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/RikidWai/Redactix"
Repository = "https://github.com/RikidWai/Redactix"
Issues = "https://github.com/RikidWai/Redactix/issues"

[tool.maturin]
module-name = "redactix._core"
python-packages = ["redactix"]
python-source = "python"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "python/**/*.py" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.pytest.ini_options]
pythonpath = ["python"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
